# interview

./: .gitignore  .travis.yml  README.md  pyproject.toml
interview/: .editorconfig  README.md  palindrome.py  pycraps.py  repcount.py
interview/runs/: pycraps.py.run.txt  pycraps.py.win-rules.run.txt
src/: area.py
tests/: __init__.py  palindrome.py  test_palindrome.py  test_pycraps.py
