# https://poetry.eustace.io/docs/pyproject/

[tool.poetry]
name = "interviewpy"
version = "0.1.0"
description = ""
authors = ["Mike Carifio <mike@carif.io>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"  # big stick
fire = "*"

[tool.poetry.dev-dependencies]
# pytest and its supporting cast.
pytest = "^3.4"
pytest-runner = "*"
testfixtures = "*"
hypothesis = "*"

# Project workflow? Seems pipenv && poetry && hatch are in a war
# hatch = "*"

# Note: Coordinate this with Pycharm by way of the Pycharm plugin `black-pycharm`
black = "^18.9b0"  # More consistent code formatting. Don't make me think.

# https://black.readthedocs.io/en/latest/pyproject_toml.html
[tool.black]
line-length = 100
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.poetry.scripts]
# poetry run python_version  ## doesn't work
python_version = "python --version"
# poetry run test  ## doesn't work
test = "python -m pytest --verbose tests/"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
